--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -82,7 +82,7 @@
     </div>
     <!--STATISTICS-->
     <div class="grid section-body">
-      <div class="grid section-body-stats">
+      <div class="grid section-stats">
         <div class="grid section border-bottom">
           <h2 class="aligned-left">8. statistics</h2>
           <div class="vert-line"></div>
@@ -97,10 +97,14 @@
             <h3 class="aligned-left">strength</h3><span>(STR)</span>
           </button>
           <div class="vert-line"></div>
-          <input name="attr_strength_score" placeholder="10" title="@{strength_score}" type="number"/>
+          <label title="strength score">
+            <input name="attr_strength_score" placeholder="10" title="@{strength_score}" type="number"/>
+          </label>
           <div class="vert-line"></div><span class="center" name="attr_strength" title="@{strength}"></span>
           <div class="vert-line"></div>
-          <input name="attr_strength_features" placeholder="distinguishing features" title="@{strength_features}" type="text"/>
+          <label title="strength distinguishing features">
+            <input name="attr_strength_features" placeholder="distinguishing features" title="@{strength_features}" type="text"/>
+          </label>
           <input name="attr_strength" type="hidden" value="50"/>
         </div>
         <div class="grid section border-bottom">
@@ -108,10 +112,14 @@
             <h3 class="aligned-left">constitution</h3><span>(CON)</span>
           </button>
           <div class="vert-line"></div>
-          <input name="attr_constitution_score" placeholder="10" title="@{constitution_score}" type="number"/>
+          <label title="constitution score">
+            <input name="attr_constitution_score" placeholder="10" title="@{constitution_score}" type="number"/>
+          </label>
           <div class="vert-line"></div><span class="center" name="attr_constitution" title="@{constitution}"></span>
           <div class="vert-line"></div>
-          <input name="attr_constitution_features" placeholder="distinguishing features" title="@{constitution_features}" type="text"/>
+          <label title="constitution distinguishing features">
+            <input name="attr_constitution_features" placeholder="distinguishing features" title="@{constitution_features}" type="text"/>
+          </label>
           <input name="attr_constitution" type="hidden" value="50"/>
         </div>
         <div class="grid section border-bottom">
@@ -119,10 +127,14 @@
             <h3 class="aligned-left">dexterity</h3><span>(DEX)</span>
           </button>
           <div class="vert-line"></div>
-          <input name="attr_dexterity_score" placeholder="10" title="@{dexterity_score}" type="number"/>
+          <label title="dexterity score">
+            <input name="attr_dexterity_score" placeholder="10" title="@{dexterity_score}" type="number"/>
+          </label>
           <div class="vert-line"></div><span class="center" name="attr_dexterity" title="@{dexterity}"></span>
           <div class="vert-line"></div>
-          <input name="attr_dexterity_features" placeholder="distinguishing features" title="@{dexterity_features}" type="text"/>
+          <label title="dexterity distinguishing features">
+            <input name="attr_dexterity_features" placeholder="distinguishing features" title="@{dexterity_features}" type="text"/>
+          </label>
           <input name="attr_dexterity" type="hidden" value="50"/>
         </div>
         <div class="grid section border-bottom">
@@ -130,10 +142,14 @@
             <h3 class="aligned-left">intelligence</h3><span>(INT)</span>
           </button>
           <div class="vert-line"></div>
-          <input name="attr_intelligence_score" placeholder="10" title="@{intelligence_score}" type="number"/>
+          <label title="intelligence score">
+            <input name="attr_intelligence_score" placeholder="10" title="@{intelligence_score}" type="number"/>
+          </label>
           <div class="vert-line"></div><span class="center" name="attr_intelligence" title="@{intelligence}"></span>
           <div class="vert-line"></div>
-          <input name="attr_intelligence_features" placeholder="distinguishing features" title="@{intelligence_features}" type="text"/>
+          <label title="intelligence distinguishing features">
+            <input name="attr_intelligence_features" placeholder="distinguishing features" title="@{intelligence_features}" type="text"/>
+          </label>
           <input name="attr_intelligence" type="hidden" value="50"/>
         </div>
         <div class="grid section border-bottom">
@@ -141,10 +157,14 @@
             <h3 class="aligned-left">power</h3><span>(POW)</span>
           </button>
           <div class="vert-line"></div>
-          <input name="attr_power_score" placeholder="10" title="@{power_score}" type="number"/>
+          <label title="power score">
+            <input name="attr_power_score" placeholder="10" title="@{power_score}" type="number"/>
+          </label>
           <div class="vert-line"></div><span class="center" name="attr_power" title="@{power}"></span>
           <div class="vert-line"></div>
-          <input name="attr_power_features" placeholder="distinguishing features" title="@{power_features}" type="text"/>
+          <label title="power distinguishing features">
+            <input name="attr_power_features" placeholder="distinguishing features" title="@{power_features}" type="text"/>
+          </label>
           <input name="attr_power" type="hidden" value="50"/>
         </div>
         <div class="grid section border-bottom">
@@ -152,15 +172,19 @@
             <h3 class="aligned-left">charisma</h3><span>(CHA)</span>
           </button>
           <div class="vert-line"></div>
-          <input name="attr_charisma_score" placeholder="10" title="@{charisma_score}" type="number"/>
+          <label title="charisma score">
+            <input name="attr_charisma_score" placeholder="10" title="@{charisma_score}" type="number"/>
+          </label>
           <div class="vert-line"></div><span class="center" name="attr_charisma" title="@{charisma}"></span>
           <div class="vert-line"></div>
-          <input name="attr_charisma_features" placeholder="distinguishing features" title="@{charisma_features}" type="text"/>
+          <label title="charisma distinguishing features">
+            <input name="attr_charisma_features" placeholder="distinguishing features" title="@{charisma_features}" type="text"/>
+          </label>
           <input name="attr_charisma" type="hidden" value="50"/>
         </div>
       </div>
       <!--DERIVED ATTRIBUTES-->
-      <div class="grid section-body-derived">
+      <div class="grid section-derived">
         <div class="grid section border-bottom">
           <h2 class="aligned-left">9. derived attributes</h2>
           <div class="vert-line"></div>
@@ -174,7 +198,9 @@
           </div>
           <div class="vert-line"></div><span class="center" name="attr_hit_points_max" title="@{hit_points_max}"></span>
           <div class="vert-line"></div>
-          <input name="attr_hit_points" placeholder="10" title="@{hit_points}" type="number"/>
+          <label title="hit points">
+            <input name="attr_hit_points" placeholder="10" title="@{hit_points}" type="number"/>
+          </label>
         </div>
         <div class="grid section border-bottom">
           <div class="derived-attr">
@@ -182,7 +208,9 @@
           </div>
           <div class="vert-line"></div><span class="center" name="attr_willpower_points_max" title="@{willpower_points_max}"></span>
           <div class="vert-line"></div>
-          <input name="attr_willpower_points" placeholder="10" title="@{willpower_points}" type="number"/>
+          <label title="willpower points">
+            <input name="attr_willpower_points" placeholder="10" title="@{willpower_points}" type="number"/>
+          </label>
         </div>
         <div class="grid section border-bottom">
           <div class="derived-attr">
@@ -190,7 +218,9 @@
           </div>
           <div class="vert-line"></div><span class="center" name="attr_sanity_points_max" title="@{sanity_points_max}"></span>
           <div class="vert-line"></div>
-          <input name="attr_sanity_points" placeholder="10" title="@{sanity_points}" type="number"/>
+          <label title="sanity points">
+            <input name="attr_sanity_points" placeholder="10" title="@{sanity_points}" type="number"/>
+          </label>
         </div>
         <div class="grid section border-bottom">
           <div class="derived-attr">
@@ -198,11 +228,13 @@
           </div>
           <div class="vert-line"></div><span class="center" name="attr_breaking_points_max" title="@{breaking_points_max}"></span>
           <div class="vert-line"></div>
-          <input name="attr_breaking_points" placeholder="10" title="@{breaking_points}" type="number"/>
+          <label title="breaking points">
+            <input name="attr_breaking_points" placeholder="10" title="@{breaking_points}" type="number"/>
+          </label>
         </div>
       </div>
       <!--PHYSICAL DESCRIPTION-->
-      <div class="grid section-body-physical">
+      <div class="grid section-physical">
         <h2 class="aligned-left">9. physical description</h2>
         <textarea name="attr_physical_description" placeholder="physical description" title="@{physical_description}"></textarea>
       </div>
@@ -212,6 +244,48 @@
   <div class="grid pyschological-data border">
     <div class="section-header">
       <h1>pyschological data </h1>
+    </div>
+    <div class="grid section-body">
+      <div class="grid section-bonds">
+        <div class="grid section border-bottom max-height">
+          <h2 class="aligned-left">11. bonds</h2>
+          <div class="vert-line"></div>
+          <h2 class="center">score</h2>
+        </div>
+        <fieldset class="repeating_bonds">
+          <div class="grid section border-bottom">
+            <label title="bond name">
+              <input name="attr_name" placeholder="bond" title="@{repeating_bonds_${x}_name}" type="text"/>
+            </label>
+            <div class="vert-line"></div>
+            <label title="bond score">
+              <input name="attr_score" placeholder="10" title="@{repeating_bonds_${x}_score}" type="number"/>
+            </label>
+          </div>
+        </fieldset>
+      </div>
+      <div class="grid section-motivations">
+        <div class="grid section border-bottom">
+          <h2 class="aligned-left">12. motivations and mental disorders</h2>
+          <textarea name="attr_motivations"></textarea>
+        </div>
+      </div>
+      <div class="grid section-incidents">
+        <div class="grid section border-bottom">
+          <h2 class="aligned-left">13. incidents of san loss without going insane</h2>
+          <div class="grid section border-bottom">
+            <label title="violence checkbox 1">
+              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="1"/><span></span>
+            </label>
+            <label title="violence checkbox 2">
+              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="2"/><span></span>
+            </label>
+            <label title="violence checkbox 3">
+              <input name="attr_violence" title="@{repeating_bonds_${x}_violence}" type="checkbox" value="3"/><span></span>
+            </label>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
