--- a/Delta Green by Arc Dream Publishing/deltagreen.html
+++ b/Delta Green by Arc Dream Publishing/deltagreen.html
@@ -252,17 +252,19 @@
           <div class="vert-line"></div>
           <h2 class="center">score</h2>
         </div>
-        <fieldset class="repeating_bonds">
-          <div class="grid section border-bottom">
-            <label title="bond name">
-              <input name="attr_name" placeholder="bond" title="@{repeating_bonds_${x}_name}" type="text"/>
-            </label>
-            <div class="vert-line"></div>
-            <label title="bond score">
-              <input name="attr_score" placeholder="10" title="@{repeating_bonds_${x}_score}" type="number"/>
-            </label>
-          </div>
-        </fieldset>
+        <div class="grid section">
+          <fieldset class="repeating_bonds">
+            <div class="grid section border-bottom">
+              <label title="bond name">
+                <input name="attr_name" placeholder="bond" title="@{repeating_bonds_${x}_name}" type="text"/>
+              </label>
+              <div class="vert-line"></div>
+              <label title="bond score">
+                <input name="attr_score" placeholder="10" title="@{repeating_bonds_${x}_score}" type="number"/>
+              </label>
+            </div>
+          </fieldset>
+        </div>
       </div>
       <div class="grid section-motivations">
         <div class="grid section border-bottom">
