fixed SchiPs calculation and appearance

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -34,20 +34,20 @@
 				<input type="number" name="attr_ke"/>
 		</div>
 		<div class="common_header common_header4">
+			<span data-i18n="schips">Schips</span>
+			<input type="number" name="attr_schips"/>
+		</div>
+		<div class="common_header common_header5">
 			<span data-i18n="sk">SK</span>
 			<input type="number" name="attr_sk_gesamt" readonly/>
 		</div>
-		<div class="common_header common_header5">
+		<div class="common_header common_header6">
 			<span data-i18n="zk">ZK</span>
 			<input type="number" name="attr_zk_gesamt" readonly />
 		</div>
-		<div class="common_header common_header6">
+		<div class="common_header common_header7">
 			<span data-i18n="gs">GS</span>
 			<input type="number" name="attr_gs_gesamt" readonly />
-		</div>
-		<div class="common_header common_header7">
-			<span data-i18n="schips">Schips</span>
-			<input type="number" name="attr_schips_aktuell"/>
 		</div>
 		<div class="common_header common_header8">
 			<span data-i18n="status">Status</span>
@@ -369,9 +369,9 @@
 		<input type="text" name='attr_gs_anmerkung' class='short' value=''>
 		<span data-i18n="schicksalspunkte">Schicksalspunkte</span>
 		<input type="number" name='attr_schips_grundwert' class='short' value='0'>
-		<input type="number" name='attr_schips_modifikator' class='short' value='0' hidden>
-		<input type="number" name='attr_schips_aktuell' class='short' value='0'>
-		<input type="number" name='attr_schips_gesamt' class='short' value='0' readonly>
+		<input type="number" name='attr_schips_modifikator' class='short' value='0'>
+		<input type="number" name='attr_schips' class='short' value='0'>
+		<input type="number" name='attr_schips_max' class='short' value='0' readonly>
 	</div>
 </div>
 </div>
@@ -6861,16 +6861,16 @@ var updateTalentModifier = function(talent, sf_mod, effekt_mod, belastung_akt, b
 
 	// Schips
 
-	on("sheet:opened change:schips_grundwert change:schips_modifikator change:schips_aktuell" , function() {
-		getAttrs(["schips_grundwert", "schips_modifikator", "schips_aktuell"], function(values) {
+	on("sheet:opened change:schips_grundwert change:schips_modifikator change:schips" , function() {
+		getAttrs(["schips_grundwert", "schips_modifikator", "schips"], function(values) {
 	    var schips_modifikator = parseInt(values.schips_modifikator) || 0;
 	    var schips_grundwert = parseInt(values.schips_grundwert);
-	    var schips_gesamt = schips_grundwert + schips_modifikator;
-	    var schips_aktuell = parseInt(values.schips_aktuell);
-			setAttrs({ schips_gesamt: schips_gesamt,
+	    var schips_max = schips_grundwert + schips_modifikator;
+	    var schips = parseInt(values.schips);
+			setAttrs({ schips_max: schips_max,
 	               schips_grundwert: schips_grundwert,
 	               schips_modifikator: schips_modifikator,
-	               schips_aktuell: schips_aktuell
+	               schips: schips
 	     });
 		});
 	});
