added new types for Magie und Götterwirken

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -100,7 +100,7 @@
 <input type="radio" name="attr_tab" class="tab tab4" value="4" />
 <span class="tab" data-i18n="magie" >Magie</span>
 <input type="radio" name="attr_tab" class="tab tab5" value="5" />
-<span class="tab" data-i18n="glaube" >Glaube</span>
+<span class="tab" data-i18n="goetterwirken" >Götterwirken</span>
 <input type="radio" name="attr_tab" class="tab tab6" value="6" />
 <span class="tab" data-i18n="optionen">Optionen</span>
 <br>
@@ -3256,25 +3256,31 @@
 		<div class="magie-section zauber">
 			<h3 data-i18n="zauber">Zauber</h3>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb0" title="all" value="0" selected></input>
-			  <span class="zauber-cb0">All</span>
+			  <span class="zauber-cb0" data-i18n="alle">Alle</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb1" title="Zauberspruch" value="1"></input>
-				<span class="zauber-cb1">Zauberspruch</span>
+				<span class="zauber-cb1" data-i18n="zauberspruch">Zauberspruch</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb2" title="Zauberspruch" value="2"></input>
-				<span class="zauber-cb2">Ritual</span>
+				<span class="zauber-cb2" data-i18n="ritual">Ritual</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb3" title="Zauberspruch" value="3"></input>
-				<span class="zauber-cb3">Elfenlied</span>
+				<span class="zauber-cb3" data-i18n="elfenlied">Elfenlied</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb4" title="Zauberspruch" value="4"></input>
-				<span class="zauber-cb4">Fluch</span>
+				<span class="zauber-cb4" data-i18n="fluch">Fluch</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb5" title="Zauberspruch" value="5"></input>
-				<span class="zauber-cb5">Streich</span>
+				<span class="zauber-cb5" data-i18n="streich">Streich</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb6" title="Zauberspruch" value="6"></input>
-				<span class="zauber-cb6">Animistenkraft</span>
+				<span class="zauber-cb6" data-i18n="animistenkraft">Animistenkraft</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb7" title="Zauberspruch" value="7"></input>
-				<span class="zauber-cb7">Zaubermelodie</span>
+				<span class="zauber-cb7" data-i18n="zaubermelodie">Zaubermelodie</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb8" title="Zauberspruch" value="8"></input>
-				<span class="zauber-cb8">Zaubertanz</span>
+				<span class="zauber-cb8" data-i18n="zaubertanz">Zaubertanz</span>
 				<input name="attr_zauber_selector" type="radio" class="zauber-cb9" title="Zauberspruch" value="9"></input>
-				<span class="zauber-cb8">Zaubertrick</span>
+				<span class="zauber-cb9" data-i18n="zaubertrick">Zaubertrick</span>
+				<input name="attr_zauber_selector" type="radio" class="zauber-cb10" title="Zauberspruch" value="10"></input>
+				<span class="zauber-cb10" data-i18n="herrschaftsritual">Herrschaftsritual</span>
+				<input name="attr_zauber_selector" type="radio" class="zauber-cb11" title="Zauberspruch" value="11"></input>
+				<span class="zauber-cb11" data-i18n="vertrautentrick">Vertrautentrick</span>
+				<input name="attr_zauber_selector" type="radio" class="zauber-cb12" title="Zauberspruch" value="12"></input>
+				<span class="zauber-cb12" data-i18n="sonstiges">Sonstiges</span>
 
 
 			<div class="zauberliste">
@@ -3289,19 +3295,25 @@
 			<input name="attr_zaubertyp" type="radio" class="hidden zauber-cb7" value="7"></input>
 			<input name="attr_zaubertyp" type="radio" class="hidden zauber-cb8" value="8"></input>
 			<input name="attr_zaubertyp" type="radio" class="hidden zauber-cb9" value="9"></input>
+			<input name="attr_zaubertyp" type="radio" class="hidden zauber-cb10" value="10"></input>
+			<input name="attr_zaubertyp" type="radio" class="hidden zauber-cb11" value="11"></input>
+			<input name="attr_zaubertyp" type="radio" class="hidden zauber-cb12" value="12"></input>
 			<div class="zauber-filtered">
 				<span  data-i18n="typ">Typ</span>
 				<select class="zaubertyp-in" style="width: 8em;" name="attr_zaubertyp" >
-					<option value="0"  selected>Typ auswählen</option>
-					<option value="1" >Zauberspruch</option>
-					<option value="2" >Ritual</option>
-					<option value="3" >Elfenlied</option>
+					<option value="0" selected data-i18n="typ-auswaehlen">Typ auswählen</option>
+					<option value="1" data-i18n="zauberspruch">Zauberspruch</option>
+					<option value="2" data-i18n="ritual">Ritual</option>
+					<option value="3" data-i18n="elfenlied">Elfenlied</option>
 					<option value="4" data-i18n="fluch">Fluch</option>
 					<option value="5" data-i18n="streich">Streich</option>
 					<option value="6" data-i18n="animistenkraft">Animistenkraft</option>
 					<option value="7" data-i18n="zaubermelodie">Zaubermelodie</option>
 					<option value="8" data-i18n="zaubertanz">Zaubertanz</option>
-					<option value="8" data-i18n="zaubertrick">Zaubertrick</option>
+					<option value="9" data-i18n="zaubertrick">Zaubertrick</option>
+					<option value="10" data-i18n="herrschaftsritual">Herrschaftsritual</option>
+					<option value="11" data-i18n="vertrautentrick">Vertrautentrick</option>
+					<option value="12" data-i18n="sonstiges">Sonstiges</option>
 				</select>
 				<span  data-i18n="name">Name</span>
 				<input type="text" name="attr_zaubername" >
@@ -3399,10 +3411,10 @@
 
 </div>
 
-<!-- Glaube -->
+<!-- Götterwirken -->
 <div class="section tab5">
 			<div class="glaube">
-			<h2 data-i18n="glaube">Glaube</h2>
+			<h2 data-i18n="goetterwirken">Götterwirken</h2>
 			<div class="glaube-header-grid">
 								<input class="glaube-header glaube-header-1" type="text" name='attr_glaube_tradition' value='Tradition' />
 								<select class="glaube-header glaube-header-2" name="attr_leiteigenschaft_ke" class="eigenschaft">
@@ -3500,15 +3512,17 @@
 			<hr/>
 
 			<div class="glaube-section liturgie">
-				<h3 data-i18n="goetterwirken">Götterwirken</h3>
+
 					<input name="attr_liturgie_selector" type="radio" class="liturgie-cb0" title="all" value="0"></input>
-					<span class="liturgie-cb0">All</span>
+					<span class="liturgie-cb0" data-i18n="alle">Alle</span>
 					<input name="attr_liturgie_selector" type="radio" class="liturgie-cb1" title="liturgiespruch" value="1"></input>
-					<span class="liturgie-cb1">Segen</span>
+					<span class="liturgie-cb1" data-i18n="segen">Segen</span>
 					<input name="attr_liturgie_selector" type="radio" class="liturgie-cb2" title="liturgiespruch" value="2"></input>
-					<span class="liturgie-cb2">Liturgie</span>
+					<span class="liturgie-cb2" data-i18n="liturgie">Liturgie</span>
 					<input name="attr_liturgie_selector" type="radio" class="liturgie-cb3" title="liturgiespruch" value="3"></input>
-					<span class="liturgie-cb3">Zeremonie</span>
+					<span class="liturgie-cb3" data-i18n="zeremonie">Zeremonie</span>
+					<input name="attr_liturgie_selector" type="radio" class="liturgie-cb4" title="liturgiespruch" value="4"></input>
+					<span class="liturgie-cb4" data-i18n="sonstiges">Sonstiges</span>
 
 				<div class="liturgieliste">
 				<fieldset class="repeating_liturgie">
@@ -3524,10 +3538,11 @@
 				<div class="liturgie-filtered">
 					<span  data-i18n="typ">Typ</span>
 					<select class="liturgietyp-in" style="width: 8em;" name="attr_liturgietyp" >
-						<option value="0"  selected>Typ auswählen</option>
-						<option value="1" >Segen</option>
-						<option value="2" >Litgurie</option>
-						<option value="3" >Zeremonie</option>
+						<option value="0"  selected data-i18n="typ-auswaehlen">Typ auswählen</option>
+						<option value="1" data-i18n="segen">Segen</option>
+						<option value="2" data-i18n="liturgie">Litgurie</option>
+						<option value="3" data-i18n="zeremonie">Zeremonie</option>
+						<option value="4" data-i18n="sonstiges">Sonstiges</option>
 					</select>
 					<span  data-i18n="name">Name</span>
 					<input type="text" name="attr_liturgiename" >
